objects/LaTam_Tax_Number_Type_Condition__mdt.object
<CustomObject>
    <fields>
        <fullName>Condition_1__c</fullName>
        <label>Condition 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_2__c</fullName>
        <label>Condition 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_3__c</fullName>
        <label>Condition 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LaTam Tax Number Type Condition</label>
    <pluralLabel>LaTam  Tax Number Type Conditions</pluralLabel>
</CustomObject>